# cup-game-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cup_game_simulator/: analysis.py  cli.py  cupgame.py  fillrates.py  helper.py
tests/: test_cupgame.py
