[tool.poetry]
name = "cup-game-simulator"
version = "0.1.0"
description = ""
authors = ["9kuehn <jascha.kuehn@studium.uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pre-commit = "^2.20.0"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
flake8 = "^5.0.4"
pre-commit = "^2.19.0"

[tool.isort]
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
